--- a/index.html
+++ b/index.html
@@ -518,10 +518,8 @@
         // Tool data
         const tools = [
             {
-                name: "Image Converter",<p>Convert images between different formats like JPG, PNG, WEBP, and more with high quality. 
-                <a href="https:/tools/image-converter.html/image-converter" target="_blank">Try our Image Converter Tool</a>.
-            </p>
-            "
+                name: "Image Converter",
+                description: "Convert images between different formats like JPG, PNG, WEBP, and more with high quality."
             },
             {
                 name: "Image Compressor",
